kubernetes/components/oidc/variants/envoy/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: ${APP}
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: ${HTTPROUTE_NAME:=${APP}}
  oidc:
    provider:
      issuer: "https://pocket-id.${DOMAIN}"
    clientID: "${OIDC_APP:=${APP}}"
    clientSecret:
      name: "${OIDC_APP:=${APP}}-oidc-credentials"
    redirectURL: "https://${SUBDOMAIN:=${OIDC_APP:=${APP}}}.${DOMAIN}/oauth2/callback"
    logoutPath: "/logout"
